# lightpolution

./: .gitignore  Cargo.toml  Pipfile  build.sh
ETL/: consolidate_incorporated.py  get_power_plants.py
detection/: FindSources.ipynb
detection/.ipynb_checkpoints/: FindSources-checkpoint.ipynb
frontend/: .eslintrc.js  .eslintrc.json  package.json
frontend/src/: App.css  App.tsx  index.css  index.tsx  utils.ts
frontend/src/Components/Checkbox/: Checkbox.tsx
frontend/src/Components/Classification/: Classification.tsx
frontend/src/Components/Controls/: Controls.tsx  ControlsStyles.tsx
frontend/src/Components/GeoCodeResults/: GeoCodeResults.tsx  GeoCodeResultsStyles.tsx
frontend/src/Contexts/: ClassificationContext.tsx
frontend/src/External-Types/: deckgl_extensions.d.ts  google.d.ts  zooniverse.d.ts
frontend/src/Hooks/: useAuth.ts  useCurrentSubject.ts  usePlaces.ts  useProject.ts  useUser.ts
frontend/src/Pages/HomePage/: HomePage.tsx  HomePageStyles.tsx
frontend/src/Pages/Page/: Page.tsx
frontend/src/shared/: types.ts
images/: download_vintage.sh  make_tiles.sh
migrations/: V1__create_light_sources.sql  V2__create_known_objects.sql
migrations/2021-05-31-175549_create_light_source/: down.sql  up.sql
src/: app_state.rs  auth.rs  config.rs  db.rs  error.rs  known_object.rs  light_source.rs  main.rs  schema.rs  targets.rs  tiles.rs
