[package]
name = "lightpolution"
version = "0.1.0"
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-multipart = "0.3"
actix-web = "3"
config = "0.10"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.59"
derive_more = "0.99.2"
diesel = { version = "^1.1.0", features = ["postgres", "r2d2","chrono", "uuid"] }
chrono = { version = "0.4.10", features = ["serde"] }
diesel_geometry = "1.2.2"
uuid = { version = "0.6", features = ["serde", "v4"] }
actix-files = "0.5.0"