[package]
name = "lightpolution"
version = "0.1.0"
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-files = "0.6.0-beta.4"
# actix-web="4.0.0-beta.6"
actix-files = "0.6.0-beta.4"
actix-http = "=3.0.0-beta.5"
actix-rt = "2.2.0"
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"

awc={version = "3.0.0-beta.3", features = ["openssl"]}

#actix-web ={version = "4.0.0-beta.6", features=['openssl']}
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.59"
derive_more = "0.99.2"
chrono = { version = "0.4.10", features = ["serde"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
#actix-files = "0.5.0"
reqwest = "0.11.3"
futures = "0.3.1"
dotenv = "0.15.0"
config = "0.10.1"
geo-types = {version = "0.7.2", features=['serde']}
deadpool-postgres = "0.9.0"
geozero = {version = "0.7.4", features=["with-wkb", "with-geo", "with-postgis-sqlx"]}
geojson ={version="0.22.2", features=['geo-types']}
geotiff = "0.0.2"

sqlx = { version = "0.5", features = [
    "postgres","uuid","chrono","runtime-actix-rustls","json","sqlite"
]}
